--- a/tests/devapps/WAM/NetFrameworkWam/NetDesktopWinFormsWAM.csproj
+++ b/tests/devapps/WAM/NetFrameworkWam/NetDesktopWinFormsWAM.csproj
@@ -81,6 +81,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\src\client\Microsoft.Identity.Client.Desktop\Microsoft.Identity.Client.Desktop.csproj">
+      <Project>{a7679ff0-19e8-41e3-9f7c-f54235124cc4}</Project>
+      <Name>Microsoft.Identity.Client.Desktop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\src\client\Microsoft.Identity.Client\Microsoft.Identity.Client.csproj">
       <Project>{60117a9b-4bb8-472e-bfff-52cbf67ca95a}</Project>
       <Name>Microsoft.Identity.Client</Name>
