--- a/src/client/Microsoft.Identity.Client/Microsoft.Identity.Client.csproj
+++ b/src/client/Microsoft.Identity.Client/Microsoft.Identity.Client.csproj
@@ -50,6 +50,7 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <DisableExtraReferences>true</DisableExtraReferences>
     <!-- for https://github.com/xamarin/xamarin-macios/issues/7249 -->
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup>
