R8 instead of default

--- a/tests/devapps/XamarinDev/XamarinDev.Android/XamarinDev.Android.csproj
+++ b/tests/devapps/XamarinDev/XamarinDev.Android/XamarinDev.Android.csproj
@@ -38,6 +38,7 @@
     <BundleAssemblies>false</BundleAssemblies>
     <AndroidUseAapt2>true</AndroidUseAapt2>
     <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
+    <AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
